@@ -3,6 +3,7 @@ Changelog (English)
 
 1.3.6
 Added support Fedora 18
+Takes into account changes in openSUSE repository
 Bugfix: dbus error in Arch Linux and Fedora
 
 1.3.5
@@ -176,6 +177,7 @@ Updated list packages of base system installation
 
 1.3.6
 Добавлена поддержка Fedora 18
+Учтены изменения в репозитории в openSUSE
 Исправлена ошибка dbus в Arch Linux и Fedora
 
 1.3.5
@@ -183,7 +185,6 @@ Updated list packages of base system installation
 Доработана функция автозапуска
 Автоматическое обновление рабочего окружения
 Добавлена проверка привилегий суперпользователя (root)
-Добавлена поддержка Fedora 18
 Двойное нажатие для выбора профиля
 Исправлена ошибка применения некорректных параметров по умолчанию
 
